added bank deposit and balance

--- a/style.css
+++ b/style.css
@@ -10,3 +10,18 @@ body {
 #transaction-area {
   display: none;
 }
+.status {
+  margin: 0px 20px;
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+}
+.deposit {
+  background-color: slateblue;
+}
+.withdraw {
+  background-color: lightsalmon;
+}
+.balance {
+  background-color: orange;
+}
